[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "discord-py>=2.5.2",
    "opuslib>=3.0.1",
    "pydub>=0.25.1",
    "pynacl>=1.5.0",
    "python-dotenv>=1.0.1",
    "pytube>=15.0.0",
    "twilio>=9.5.1",
    "yt-dlp>=2025.3.25",
]
